--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -29,12 +30,18 @@ dist.jar=${dist.dir}/Application.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.java-json.jar=Project7-3 (2)\\java-json.jar
 file.reference.json-20160212.jar=dist\\lib\\json-20160212.jar
+file.reference.json-20160212.jar-1=C:\\Users\\Mateusz\\OneDrive\\IS2209-05 project\\Project4-3\\Project3-3\\Project1-3\\dist\\lib\\json-20160212.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.json-20160212.jar}
+    ${file.reference.json-20160212.jar}:\
+    ${file.reference.json-20160212.jar-1}:\
+    ${file.reference.java-json.jar}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
